force-app/main/default/objects/RepairDiagnosis__c/RepairDiagnosis__c.object-meta.xml
<CustomObject>
    <description>수리 진단 정보를 관리하는 오브젝트입니다.</description>
    <label>Repair Diagnosis</label>
    <nameField>
        <label>Diagnosis Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Diagnoses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>