force-app/main/default/objects/RepairDiagnosis__c/fields/DiagnosisResult__c.field-meta.xml
<CustomField>
    <fullName>DiagnosisResult__c</fullName>
    <description>진단 결과 내용입니다.</description>
    <label>Diagnosis Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>