force-app/main/default/objects/RepairDiagnosis__c/fields/EstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCost__c</fullName>
    <description>예상 수리 비용입니다.</description>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>