force-app/main/default/objects/RepairDiagnosis__c/fields/RepairOrder__c.field-meta.xml
<CustomField>
    <fullName>RepairOrder__c</fullName>
    <description>연결된 수리 주문입니다.</description>
    <label>Repair Order</label>
    <referenceTo>RepairOrder__c</referenceTo>
    <relationshipLabel>Repair Diagnoses</relationshipLabel>
    <relationshipName>RepairDiagnoses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>